--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 
   <div class="canva">
+    <!-- PROFILE CARD -->
     <div class="profile-card">
+      <!-- HEADER -->
       <div class="header-card">
         <div class="hamburger-menu">
           <a href="" class="menu"><i class="fas fa-bars"></i></a>
@@ -27,7 +29,9 @@
           <h3 class="sub-name">@Junno.dev</h4>
         </div>
       </div>
+      <!-- BODY -->
       <div class="content">
+        <!-- CONTEUDO DA ESQUEDA -->
         <div class="left">
           <div class="about-container">
             <h3 class="title">About</h3>
@@ -48,6 +52,7 @@
             </div>
           </div>
         </div>
+        <!-- CONTEUDO DA DIREITA -->
         <div class="right">
           <div class="number-circle">
             <h3 class="number">12</h3>
