--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
               <i class="fas fa-camera"></i>
             </div>
           </div>
-          <h3 class="name">Junior Gucciardo</h3>
-          <h3 class="sub-name">@Junno.dev</h4>
+          <h3 class="name">José Junior</h3>
+          <h3 class="sub-name">@OjuniorG</h4>
+        </div>
+      </div>
+      <div class="header-menu">
+        <div class="list-conteiner">
+          <ul class="li">😎 Inicio</ul>
+          <ul class="li">😎 Habilidades</ul>
+          <ul class="li">😎 Projetos</ul>
+          <ul class="li">😊 Blog</ul>
         </div>
       </div>
       <!-- BODY -->
