--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- HEADER -->
       <div class="header-card">
         <div class="hamburger-menu">
-          <a href="" class="menu"><i class="fas fa-bars"></i></a>
+          <a href="" onclick="openMenu()" class="menu"><i class="fas fa-bars"></i></a>
         </div>
         <a href="" class="mail"><i class="far fa-envelope"></i></a>
         <div class="main">
@@ -81,6 +81,7 @@
 
 
   <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/app.js"></script>
 
 </body>
 </html>
