--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <!-- HEADER -->
       <div class="header-card">
         <div class="hamburger-menu">
-          <a href="" onclick="openMenu()" class="menu"><i class="fas fa-bars"></i></a>
+          <a href="#" onclick="openMenu()" class="menu"><i class="fas fa-bars"></i></a>
         </div>
         <a href="" class="mail"><i class="far fa-envelope"></i></a>
-        <div class="main">
+        <div class="main-header">
           <div class="image">
             <div class="hover">
               <i class="fas fa-camera"></i>
