--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
   <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/js/app.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 </html>
